--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <header class="header">
+    <header class="header hidden">
         <div class="header_wrapper">
             <div class="header-navigation">
                 <button class="header-navigation__btn">
